# youTube_Automation_with_Rust

./: .gitignore  Cargo.toml  PROJECT_STATUS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  run.ps1
.cargo/: config.toml
src/: logging.rs  main.rs
videos/: .gitkeep
